# cafehere

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  all_db.sql  docker-compose.yml  pyproject.toml  specific_db.sql
apps/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/authentication/migrations/: 0001_0001_create_users.py
apps/cafes/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/cafes/migrations/: 0001_initial.py  0002_cafe_unique_cafe_name_per_user.py
apps/products/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_create_product_option_category_etc.py  0002_auto_20230902_0540.py  0003_remove_product_uuid.py  0004_product_initial_consonant.py  0005_auto_20230902_2228.py  0006_category_uuid.py  0007_optiongroup_uuid.py  0008_product_uuid.py
core/: urls.py
core/http/: exception_handler.py  response.py
core/settings/: default.py  development.py  production.py
core/utils/: hangeul.py  models.py  test.py  validators.py
locale/en/LC_MESSAGES/: django.po
locale/ko/LC_MESSAGES/: django.mo  django.po
readme/: README.kor.md
