[tool.poetry]
name = "cafehere"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.*"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"
djangorestframework-simplejwt = "^5.3.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
mysqlclient = "^2.2.0"
django-filter = "^23.2"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipython = "^8.14.0"
pre-commit = "^3.3.3"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
